test/fail/06-missing_semicolon.perk
fun main(): void {
    let x: int = 5
    return x
}